[tool.poetry]
name = "gpt4all"
version = "0.1.0"
description = ""
authors = ["Björn Nadrowski <bjrnfrdnnd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
accelerate = "^0.18.0"
datasets = "^2.11.0"
torchmetrics = "^0.11.4"
evaluate = "^0.4.0"
transformers = "^4.27.4"
wandb = "^0.14.2"
pip = "^23.0.1"
peft = "^0.2.0"
nodelist-inflator = "^0.2.0"
deepspeed = "^0.8.3"
sentencepiece = "^0.1.97"
jsonlines = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
